# imgui-notify

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  example.sln  fa-solid-900.h  notify.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml  codeql.yml
example/: CMakeLists.txt  Makefile  example.vcxproj  example.vcxproj.filters  imgui.h  imgui.ini  imgui_draw.cpp  main.cpp
example/backends/: IconsFontAwesome6.h  ImGuiNotify.hpp
example/imgui/: imgui.cpp  imgui_demo.cpp
example/src/: imgui_notify.h
src/: fa-regular-400.h  fa-solid-900.h  font_awesome_5.h  notify.h
unixExample/: Makefile  main.cpp
unixExample/backends/: IconsFontAwesome6.h  ImGuiNotify.hpp
unixExample/imgui/: imconfig.h
win32Example/: CMakeLists.txt  main.cpp
win32Example/backends/: IconsFontAwesome6.h  ImGuiNotify.hpp
